src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__one_cycle_multiple_self_a.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error[E029]: Recursive data structure `A -> A` has infinite size
  ┌─ <internal>:2:18
  │
2 │             TYPE A : STRUCT
  │                  ^ Recursive data structure `A -> A` has infinite size
